Make sure reference result menu can wrap
OOUI was effectively overriding this with it's own rule for labels in an option
widget.

Bug: T99267

--- a/modules/ve-mw/ui/styles/widgets/ve.ui.MWReferenceResultWidget.css
+++ b/modules/ve-mw/ui/styles/widgets/ve.ui.MWReferenceResultWidget.css
@@ -11,7 +11,7 @@
 	border-bottom: solid 1px #eee;
 }
 
-.ve-ui-mwReferenceResultWidget .oo-ui-labelElement-label {
+.ve-ui-mwReferenceResultWidget.oo-ui-labelElement .oo-ui-labelElement-label {
 	white-space: normal;
 }
 
